<resources>
    <string name="app_name">Payment Solutions</string>
    <string name="facebook_app_id" translatable="false">985220968321557</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb985220968321557</string>
    <string name="content_description">logo</string>
    <string name="login_facebook">Login with facebook</string>
    <string name="login_email">Login with email</string>
    <string name="agree_terms">By signing up i accept the&#160;<u>terms and conditions</u></string>
    <string name="new_account">Create a new account ?</string>
    <string name="sign_up">Signup</string>
    <string name="name">Name or username</string>
    <string name="email">Email Address</string>
    <string name="mobile">Mobile Number</string>
    <string name="password">Password</string>
    <string name="repeat">Repeat Password</string>
    <string name="register">Register</string>
    <string name="add_photo">Add\nphoto</string>
    <string name="navigation_drawer_open">Opened</string>
    <string name="navigation_drawer_close">Closed</string>
    <string name="amount">amount</string>
    <string name="price"><b>4.900.0</b>&#160;EGP</string>
    <string name="action_bar">Your Balance\n<b>120,000,000.23</b> EGP</string>
    <string name="send_money">How much do you want to send?</string>
    <string name="button100"><b>+100</b>&#160;L.E</string>
    <string name="button150"><b>+150</b>&#160;L.E</string>
    <string name="button200"><b>+200</b>&#160;L.E</string>
    <string name="button500"><b>+500</b>&#160;L.E</string>
    <string name="product_name">Name</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_price">Price</string>
    <string name="product_description">Description</string>
    <string name="product_available">Available</string>
    <string name="add_product">Add Product</string>
    <string name="write_issue">Please write your issue</string>
    <string name="upload_image">Upload Image</string>
    <string name="submit">Submit</string>
    <string name="invoice">Invoice</string>
    <string name="invoice_number" translatable="false">#000009</string>
    <string name="due_30_days">Due in 30 Days</string>
    <string name="date" translatable="false">07/02/2018</string>
    <string name="shop_or_customer">Customer</string>
    <string name="email_customer" translatable="false">0123456789</string>
    <string name="description">Description</string>
    <string name="product_name_dummy">iphone 6s plus 64GB</string>
    <string name="quantity_number" translatable="false">12</string>
    <string name="price_dummy" translatable="false">13,000.0</string>
    <string name="add_tax">Add Tax</string>
    <string name="add_item">Add item</string>
    <string name="sub_total">Sub-total</string>
    <string name="sub_total_num" translatable="false">556,788.59</string>
    <string name="tax">Tax (0%)</string>
    <string name="tax_num" translatable="false">000,00.00</string>
    <string name="total">Total</string>
    <string name="total_num" translatable="false">556,788.59</string>
    <string name="paid">Paid</string>
    <string name="paid_num" translatable="false">000,00.00</string>
    <string name="balance_due">Balance Due</string>
    <string name="f_name">Name</string>
    <string name="wael">Wael</string>
    <string name="l_name">Last Name</string>
    <string name="abdelrahman">Abdelrahman</string>
    <string name="v_name">Vendor Name</string>
    <string name="ex">ex.Apple Shop</string>
    <string name="mobile_profile">Mobile</string>
    <string name="mob_num" translatable="false">0123456789</string>
    <string name="email_profile">Email</string>
    <string name="email_dummy" translatable="false">abc@mail.com</string>
    <string name="country">Address</string>
    <string name="country_dummy">Egypt</string>
    <string name="product_dummy">Iphone 6s plus RoseGo 64GB w..</string>
    <string name="size">Size</string>
    <string name="size_dummy">46 GB</string>
    <string name="colors">Colors</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="address">Address</string>
    <string name="password_register">Password</string>
    <string name="send_to">Enter the number of receiver</string>
    <string name="sms">SMS to receiver</string>
    <string name="paying">How do you want to pay?</string>
    <string name="send_money_button">send money</string>
    <string name="categories">Categories</string>
    <string name="all_stores">All Stores</string>
    <string name="enter_data">Please enter your data</string>
    <string name="subject">Subject</string>
    <string name="order_tracking">Order Tracking</string>
    <string name="home">Home</string>
    <string name="profile">My Profile</string>
    <string name="payments_history">Payments History</string>
    <string name="favorites">Favorites</string>
    <string name="card_list">My Carts</string>
    <string name="settings">Settings</string>
    <string name="select_category">Select Category</string>
    <string name="valid_details">Enter Valid Details !</string>
    <string name="price_empty">Price should not be empty</string>
    <string name="name_empty">Name should not be empty</string>
    <string name="desc_empty">Description should not be empty</string>
    <string name="qunatity_empty">Quantity should not be empty</string>
    <string name="no_internet">No internet connection</string>
    <string name="unavailable">Unavailable</string>
    <string name="error">Error</string>
    <string name="error_try_again">Error.Please Try Again</string>
    <string name="complaint">Complaint</string>
    <string name="enter_complaint">Enter your Complaint</string>
    <string name="error_complaint">Error in Sending Complaint</string>
    <string name="scan_qr">Scan QR</string>
    <string name="send_money_home">Send Money</string>
    <string name="invoices">Invoices</string>
    <string name="stores">Stores</string>
    <string name="support">Support</string>
    <string name="tell_friend">Tell a Friend</string>
    <string name="align">Align QR Code Within Frame to Scan</string>
    <string name="send_succsessful">Send Successful</string>
    <string name="update_successful">Updated Successfully</string>
    <string name="send_complaint">Send Complaint Successful</string>
    <string name="product_added">Product Added Successful</string>
    <string name="nothing">Nothing to check</string>
    <string name="camera_permission">Camera Permission Denied</string>
    <string name="create_invoices">Create Invoice</string>
    <string name="email_valid">Email should be valid</string>
    <string name="password_valid">Password should not be empty</string>
    <string name="email_or_password">Email or Password is wrong</string>
    <string name="register_successful">Register Successful.Login Now</string>
    <string name="mobiles">Mobiles</string>
    <string name="profile_test">Profile</string>
    <string name="name_valid">Name should not be empty</string>
    <string name="mobile_valid">Mobile Number should not be empty and contain 11 number</string>
    <string name="address_valid">Address should not be empty</string>
    <string name="email_or_mobile">Email or Mobile is exist</string>
    <string name="sending_money">Sending Money</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="check_send_number">Check send to number</string>
    <string name="mobile_not_exist">Mobile Number isn\'t exist</string>
    <string name="error_money">Error in Sending Money</string>
    <string name="error_update_profile">Error in updating profile</string>
    <string name="language">Arabic</string>
    <string name="added">Added Successfully</string>
    <string name="add_error">Error in add to cart</string>
    <string name="already_added">Added</string>
    <string name="total_price">Total</string>
    <string name="rs">210 R.S</string>
    <string name="payment_page">Payment Page</string>
    <string name="quantity">Quantity</string>
    <string name="card">Cart</string>
    <string name="save">Save</string>
    <string name="invoice_status">Invoice Created Successfully</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_price">Enter Price</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="check_data">Check Your Data</string>
    <string name="vendor">Vendor</string>
    <string name="recent">Recent</string>
    <string name="older">Older</string>
    <string name="bill_to">Bill To</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="balance">Balance</string>
    <string name="status">Status</string>
    <string name="invoices_history">Invoices History</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="cus_name">Customer Name</string>
    <string name="bank">Bank (optional)</string>
    <string name="bank_name">bank name</string>
    <string name="add">Add</string>
    <string name="add_cus">Add Customer</string>
    <string name="error_view_invoices_history">Error in retrieving invoices history</string>
    <string name="show_invoice">Show Invoice</string>
    <string name="enter_code">Enter the Code</string>
    <string name="enter">Enter</string>
    <string name="verified">Mobile Verified</string>
    <string name="mobile_number">Error in Mobile Number</string>
    <string name="error_in_code">Error in Code</string>
    <string name="enter_valid_code">Enter Code</string>
    <string name="add_invoice">Add Invoice</string>
    <string name="pay_now">Pay Now</string>
    <string name="my_products">My Products</string>
    <string name="edit_product">Edit Product</string>
    <string name="more_info">More info</string>
    <string name="total_invoices">Total invoices</string>
    <string name="total_deposits">Total Deposits</string>
    <string name="total_transfers">Total Transfers</string>
    <string name="control_panel">Control Panel</string>
    <string name="add_current_client">Add Current Client</string>
    <string name="product_number">Product Number</string>
    <string name="sales_statistics">Sales Statistics</string>
    <string name="product_sales">Product Sales</string>
    <string name="charge_method">Charge Method</string>
    <string name="process">Process</string>
    <string name="charge_your_account">Charge Your Account</string>
    <string name="bank_name_2">as Bank Name</string>
    <string name="id_number">ID Number</string>
    <string name="bank_account">Bank Account</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="add_bank">Add Bank Account</string>
    <string name="withdraw_method">Withdraw Method</string>
    <string name="country_word">Country</string>
    <string name="city">City</string>
    <string name="email_only">Email</string>
    <string name="phone">Phone</string>
    <string name="my_customers">My Customers</string>
    <string name="date_only">Date</string>
    <string name="amount_only">Amount</string>
    <string name="my_transfers">My Transfers</string>
    <string name="charges_list">Charges List</string>
    <string name="fawry_number">Fawry No.</string>
    <string name="withdraws_history">Withdraws History</string>
    <string name="withdraw">Withdraw</string>
    <string name="charged_successful">Charged Successfully</string>
    <string name="withdraw_successful">Withdraw Successful</string>
    <string name="log_out">Logout</string>
</resources>

