<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingPrefix"
    android:animateLayoutChanges="true"
    tools:context="com.paymentsolutions.paymentsolutions.LoginActivity">

    <ProgressBar
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/progress_indicator"
        android:visibility="invisible"
        android:layout_gravity="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:animateLayoutChanges="true"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/parent_layout"
            android:orientation="vertical"
            android:animateLayoutChanges="true"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/logo_english"
                android:contentDescription="@string/content_description" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                fontPath="fonts/OpenSans-Regular.ttf"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/edit_text"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                fontPath="fonts/OpenSans-Regular.ttf"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/edit_text"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />

            <Button
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                fontPath="fonts/OpenSans-Regular.ttf"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/my_button2"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/login_email"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/facebook_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                fontPath="fonts/OpenSans-Regular.ttf"
                android:layout_marginRight="25dp"
                android:background="@drawable/my_button"
                android:foreground="?attr/selectableItemBackground"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/login_facebook"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_gravity="center"
                fontPath="fonts/OpenSans-Regular.ttf"
                android:layout_marginTop="10dp"
                android:text="@string/agree_terms"
                android:textColor="#464E7A" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="65dp"
                android:layout_marginRight="65dp"
                android:layout_marginTop="45dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/new_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                fontPath="fonts/OpenSans-Regular.ttf"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:text="@string/new_account"
                android:textColor="#464E7A" />

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/sign_up"
                fontPath="fonts/OpenSans-Bold.ttf"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>